fixing phone overflow

--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ head, body {
 }
 
 body {
+    position: relative;
     width: 100vw;
-    height: auto;
+    height: 100%;
     background-color: black;
     background-image: url("images/background.jpg");
     background-size: cover;
